// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Notification BannerNotification smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="display: flex; flex-direction: column; padding: 1rem; justify-content: center; align-items: center; width: 1024px;"
        >
          <div
            style="width: 100%; height: 100%;"
          >
            <div
              class="emotion-2"
            >
              <button
                class="emotion-3"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-4"
                >
                  <span>
                    Show Notifications
                  </span>
                </span>
              </button>
            </div>
          </div>
          <p
            style="padding-top: 8px;"
          />
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Notification InlineNotificationStory smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: hidden;
  width: 100%;
  min-height: 2.875rem;
  border-radius: 0.25rem;
  color: #0f0f17;
  font-size: 0.875rem;
  border: 0.0625rem solid #d6f2dc;
  background: #f4faf5;
}

.emotion-3[notification-type='banner'] {
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-5 {
  padding-right: 0.5rem;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #36C152;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-7 path {
  fill: #36C152;
}

.emotion-8 {
  padding: 1rem 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
  font-weight: 500;
}

.emotion-17 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-18 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-18:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-18:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-20 {
  cursor: pointer;
  margin-left: 1rem;
}

.emotion-22 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-22 path {
  fill: #5f6c85;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              style="display: flex; flex-direction: column; padding: 1rem; justify-content: center; align-items: center; width: 768px;"
            >
              <div
                class="emotion-3"
                data-testid="inline"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <span
                      class="emotion-6"
                    >
                      <svg
                        class="emotion-7"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="\\uD83D\\uDD36-Symbols"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            id="Success"
                          >
                            <path
                              d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M16.5857864,8 L10.929,13.6572814 L8.10050506,10.8284271 L6.6862915,12.2426407 L10.9289322,16.4852814 L12.3431458,15.0710678 L12.343,15.0712814 L18,9.41421356 L16.5857864,8 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="emotion-8"
                    data-testid="inline-message"
                  >
                    Informative Message
                  </div>
                </div>
                <div
                  class="emotion-9"
                />
              </div>
              <p
                style="padding-top: 8px;"
              />
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              style="display: flex; flex-direction: column; padding: 1rem; justify-content: center; align-items: center; width: 768px;"
            >
              <div
                class="emotion-3"
                data-testid="inline"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <span
                      class="emotion-6"
                    >
                      <svg
                        class="emotion-7"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="\\uD83D\\uDD36-Symbols"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            id="Success"
                          >
                            <path
                              d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M16.5857864,8 L10.929,13.6572814 L8.10050506,10.8284271 L6.6862915,12.2426407 L10.9289322,16.4852814 L12.3431458,15.0710678 L12.343,15.0712814 L18,9.41421356 L16.5857864,8 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="emotion-8"
                    data-testid="inline-message"
                  >
                    Informative Message
                  </div>
                </div>
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-17"
                  >
                    <button
                      class="emotion-18"
                      data-testid="button"
                      type="button"
                    >
                      <span
                        class="emotion-19"
                      >
                        <span>
                          Action
                        </span>
                      </span>
                    </button>
                  </div>
                  <span
                    class="emotion-20"
                    data-testid="notification-close"
                  >
                    <span
                      class="emotion-6"
                    >
                      <svg
                        class="emotion-22"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="\\uD83D\\uDD36-Symbols"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            id="Close"
                          >
                            <path
                              d="M17.6568542,4.92893219 L19.0710678,6.34314575 L13.4139322,11.9999322 L19.0710678,17.6568542 L17.6568542,19.0710678 L11.9999322,13.4139322 L6.34314575,19.0710678 L4.92893219,17.6568542 L10.5849322,11.9999322 L4.92893219,6.34314575 L6.34314575,4.92893219 L11.9999322,10.5849322 L17.6568542,4.92893219 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
              <p
                style="padding-top: 8px;"
              />
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              style="display: flex; flex-direction: column; padding: 1rem; justify-content: center; align-items: center; width: 768px;"
            >
              <div
                class="emotion-3"
                data-testid="inline"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <span
                      class="emotion-6"
                    >
                      <svg
                        class="emotion-7"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="\\uD83D\\uDD36-Symbols"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            id="Success"
                          >
                            <path
                              d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M16.5857864,8 L10.929,13.6572814 L8.10050506,10.8284271 L6.6862915,12.2426407 L10.9289322,16.4852814 L12.3431458,15.0710678 L12.343,15.0712814 L18,9.41421356 L16.5857864,8 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="emotion-8"
                    data-testid="inline-message"
                  >
                    Informative Message
                  </div>
                </div>
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-17"
                  >
                    <button
                      class="emotion-18"
                      data-testid="button"
                      type="button"
                    >
                      <span
                        class="emotion-19"
                      >
                        <span>
                          Action
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <p
                style="padding-top: 8px;"
              />
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              style="display: flex; flex-direction: column; padding: 1rem; justify-content: center; align-items: center; width: 768px;"
            >
              <div
                class="emotion-3"
                data-testid="inline"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <span
                      class="emotion-6"
                    >
                      <svg
                        class="emotion-7"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="\\uD83D\\uDD36-Symbols"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            id="Success"
                          >
                            <path
                              d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M16.5857864,8 L10.929,13.6572814 L8.10050506,10.8284271 L6.6862915,12.2426407 L10.9289322,16.4852814 L12.3431458,15.0710678 L12.343,15.0712814 L18,9.41421356 L16.5857864,8 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </span>
                  </div>
                  <div
                    class="emotion-8"
                    data-testid="inline-message"
                  >
                    Informative Message
                  </div>
                </div>
                <div
                  class="emotion-9"
                >
                  <span
                    class="emotion-20"
                    data-testid="notification-close"
                  >
                    <span
                      class="emotion-6"
                    >
                      <svg
                        class="emotion-22"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="\\uD83D\\uDD36-Symbols"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            id="Close"
                          >
                            <path
                              d="M17.6568542,4.92893219 L19.0710678,6.34314575 L13.4139322,11.9999322 L19.0710678,17.6568542 L17.6568542,19.0710678 L11.9999322,13.4139322 L6.34314575,19.0710678 L4.92893219,17.6568542 L10.5849322,11.9999322 L4.92893219,6.34314575 L6.34314575,4.92893219 L11.9999322,10.5849322 L17.6568542,4.92893219 Z"
                            />
                          </g>
                        </g>
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
              <p
                style="padding-top: 8px;"
              />
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Notification Playground1 smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="display: flex; flex-direction: column; padding: 1rem; justify-content: center; align-items: center; width: 768px;"
        >
          <div
            style="width: 100%; height: 100%;"
          >
            <div
              class="emotion-2"
            >
              <button
                class="emotion-3"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-4"
                >
                  <span>
                    Show Notifications
                  </span>
                </span>
              </button>
            </div>
          </div>
          <p
            style="padding-top: 8px;"
          />
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Notification Playground2 smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="display: flex; flex-direction: column; padding: 1rem; justify-content: center; align-items: center; width: 768px;"
        >
          <div
            style="width: 100%; height: 100%;"
          >
            <div
              class="emotion-2"
            >
              <button
                class="emotion-3"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-4"
                >
                  <span>
                    Show Notifications
                  </span>
                </span>
              </button>
            </div>
          </div>
          <p
            style="padding-top: 8px;"
          />
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Notification Playground3 smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="display: flex; flex-direction: column; padding: 1rem; justify-content: center; align-items: center; width: 768px;"
        >
          <div
            style="width: 100%; height: 100%;"
          >
            <div
              class="emotion-2"
            >
              <button
                class="emotion-3"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-4"
                >
                  <span>
                    Show Notifications
                  </span>
                </span>
              </button>
            </div>
          </div>
          <p
            style="padding-top: 8px;"
          />
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Notification SnackbarNotification smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="display: flex; flex-direction: column; padding: 1rem; justify-content: center; align-items: center; width: 768px;"
        >
          <div
            style="width: 100%; height: 100%;"
          >
            <div
              class="emotion-2"
            >
              <button
                class="emotion-3"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-4"
                >
                  <span>
                    Show Notifications
                  </span>
                </span>
              </button>
            </div>
          </div>
          <p
            style="padding-top: 8px;"
          />
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Notification ToastNotification smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-3:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="display: flex; flex-direction: column; padding: 1rem; justify-content: center; align-items: center; width: 768px;"
        >
          <div
            style="width: 100%; height: 100%;"
          >
            <div
              class="emotion-2"
            >
              <button
                class="emotion-3"
                data-testid="button"
                type="button"
              >
                <span
                  class="emotion-4"
                >
                  <span>
                    Show Notifications
                  </span>
                </span>
              </button>
            </div>
          </div>
          <p
            style="padding-top: 8px;"
          />
        </div>
      </span>
    </span>
  </body>
</html>
`;
